Update draft abstract

--- a/article/ms.qmd
+++ b/article/ms.qmd
@@ -50,7 +50,7 @@ format:
     journal:
       include-jss-default: false
 bibliography: references.bib
-abstract: We introduce **pypomp**, a high-performance Python package for statistical inference for partially observed Markov process (POMP) models. Built to handle complex stochastic dynamic systems, it implements simulation-based algorithms including sequential Monte Carlo and iterated filtering. By utilizing parallel processing on graphical processing unit (GPU) hardware, **pypomp** is able to run these algorithms several times faster than its predecessor, the R package **pomp**. Models that took weeks to fit and evaluate in **pomp** now take only days in **pypomp**, facilitating the use of previously impractical models. The package offers an accessible interface that streamlines the entire pipeline of model construction, fitting, and analysis. With its scalability, **pypomp** supports the analysis of large datasets in fields such as epidemiology, ecology, and finance, providing a robust environment for modeling partially observed temporal processes.
+abstract: Methods for fitting and evaluating partially observed Markov process (POMP) mechanistic models are useful in a variety of fields such as epidemiology, ecology, and finance, but they are limited by their computational demands. In response, we introduce **pypomp**, a high-performance Python package for statistical inference using POMP models. Built to handle complex stochastic dynamic systems, it implements plug-and-play algorithms for likelihood-based inference including sequential Monte Carlo and iterated filtering. By utilizing parallel processing on graphical processing unit (GPU) hardware, **pypomp** is able to run these algorithms several times faster than its predecessor, the R package **pomp**. Models that took weeks to fit and evaluate in **pomp** now take only days in **pypomp**, facilitating the use of previously impractical models. The package offers an accessible interface that streamlines the entire pipeline of model construction, fitting, and analysis, allowing practitioners to test large, complex models with minimal implementation overhead.
 header-includes:
   - \usepackage{algorithm}
   - \usepackage{algpseudocode}
